--- a/src/app/main/hero/right-lateral/right-lateral.scss
+++ b/src/app/main/hero/right-lateral/right-lateral.scss
@@ -115,3 +115,33 @@
     display: flex;
   }
 }
+
+@media (max-width: 480px) {
+  .right-lateral {
+    transform: translateY(50px);
+  }
+}
+
+@media (max-height: 700px) {
+  .right-lateral {
+    transform: translateY(40px);
+  }
+}
+
+@media (max-height: 650px) {
+  .right-lateral {
+    transform: translateY(50px);
+  }
+}
+
+@media (max-width: 480px) and (max-height: 800px) {
+  .right-lateral {
+    transform: translateY(70px);
+  }
+}
+
+@media (max-width: 480px) and (max-height: 700px) {
+  .right-lateral {
+    transform: translateY(80px);
+  }
+}
